<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/viewRegisterMobileBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical" >
        
        <TextView 
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrationMessage"  />  
            
        <TextView 
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/black"  />

     
        <AutoCompleteTextView 
            android:id="@+id/countryselector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country" />

        <EditText
            android:id="@+id/enterNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enterMobileNumber"
            android:text="9342464980"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/submitNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/submit"
            style="@style/btnStyleOrange" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewRegisterVerificationBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/verificationCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enterVerificationCode"
            android:inputType="numberDecimal"
            android:text="1234" />

        <Button
            android:id="@+id/sendVerificationCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/send"
            style="@style/btnStyleOrange" />
    </LinearLayout>

</LinearLayout>